--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ $(window).scroll(function (){
 
 		$(this).attr("name", position + 330);
 		if (scroll > position - 330){ //スクロール位置が要素の位置を過ぎたとき
-			$(this).addClass('animationSlideInThumbnail-active'); //クラス「active」を与える
+			$(this).addClass('animationSlideInThumbnail-active'); //クラス「animationSlideInThumbnail-active」を与える
 		}
 	});
 });
