スクロールすると、ページ上部のゲージが溜まっていくアニメーションを実装。

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<span class="bx-scrollGauge"></span>
+	
 	<div class="box-thumbnail animationSlideInThumbnail">
 		<img class="img-thumbnail" src="img_thumbnailGd.jpg" alt="サムネイル" width="100%" height="">
 	</div><!-- /.box-thumbnail -->
@@ -17,17 +20,25 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
-$(window).scroll(function (){
-	$(".animationSlideInThumbnail").each(function(){
-		var position = $(this).offset().top; //ページの一番上から要素までの距離を取得
+$(window).load(function() {
+	$(window).scroll(function (){
 		var scroll = $(window).scrollTop(); //スクロールの位置を取得
-		var windowHeight = $(window).height(); //ウインドウの高さを取得
-
-		$(this).attr("name", position + 330);
-		if (scroll > position - 330){ //スクロール位置が要素の位置を過ぎたとき
-			$(this).addClass('animationSlideInThumbnail-active'); //クラス「animationSlideInThumbnail-active」を与える
-		}
+		var windowHeight = $(window).height(); //ウィンドウの高さを取得
+		var documentHeight = $(document).height(); //ページの高さを取得
+		var maxScrollVlue = documentHeight - windowHeight; //最大のスクロール値
+		var valueScrollGauge = scroll / (maxScrollVlue) * 100; //スクロール値の百分率
+		
+		$(".bx-scrollGauge").css({width: valueScrollGauge + "%"});
+		
+		$(".animationSlideInThumbnail").each(function(){
+			var position = $(this).offset().top; //ページの一番上から要素までの距離を取得
+	
+			if (scroll > position - 330){ //スクロール位置が要素の位置を過ぎたとき
+				$(this).addClass('animationSlideInThumbnail-active'); //クラス「animationSlideInThumbnail-active」を与える
+			}
+		});
 	});
+
 });
 </script>
 </body>
